--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/react-router-dom": "^5.3.3",
     "circomlib": "^2.0.5",
     "ipfs-http-client": "^60.0.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.0",
