--- a/myanchorproject/Anchor.toml
+++ b/myanchorproject/Anchor.toml
@@ -1,16 +1,17 @@
 [toolchain]
 package_manager = "yarn"
-anchor_version = "0.29.0"
+anchor_version = "0.31.1"
+solana_version = "2.1.22"
 
 [features]
 resolution = true
 skip-lint = false
 
 [programs.localnet]
-idenclave = "E7C52ahzQMJB7u9LQmbTtRxYDeHS814HGeWZcWZgkuag"
+idenclave = "GhdfjF2uHkx45jWaLTaHLfTeCoEsnAnyi2ZcsHxpCNha"
 
 [programs.devnet]
-idenclave = "E7C52ahzQMJB7u9LQmbTtRxYDeHS814HGeWZcWZgkuag"
+idenclave = "GhdfjF2uHkx45jWaLTaHLfTeCoEsnAnyi2ZcsHxpCNha"
 
 [registry]
 url = "https://api.apr.dev"
